unpackaged/main/default/objects/FPC_Funding_del__c/FPC_Funding_del__c.object-meta.xml
<CustomObject>
    <description>Table of lenders this deal is shopped to.</description>
    <label>Funding</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Funding ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Funding</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>