unpackaged/main/default/objects/FPC_Funding_del__c/fields/Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Date__c</fullName>
    <description>Acceptance Date</description>
    <inlineHelpText>Type in the acceptance date for the lease.</inlineHelpText>
    <label>Acceptance Date</label>
    <type>DateTime</type>
</CustomField>