unpackaged/main/default/objects/FPC_Funding_del__c/fields/Adjusted_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Annual_Revenue__c</fullName>
    <description>Annual Revenue * SIC4 Revenue Adjustment %</description>
    <label>Adjusted Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>