unpackaged/main/default/objects/FPC_Funding_del__c/fields/Advance_Payment__c.field-meta.xml
<CustomField>
    <fullName>Advance_Payment__c</fullName>
    <description>Advanced Payment amount</description>
    <inlineHelpText>Type in the amount of the advanced lease payments.</inlineHelpText>
    <label>Advance Payment</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>