unpackaged/main/default/objects/FPC_Funding_del__c/fields/API_Send_Enabled__c.field-meta.xml
<CustomField>
    <fullName>API_Send_Enabled__c</fullName>
    <formula>Lender_ID__r.API_Send_Enabled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API Send Enabled</label>
    <type>Checkbox</type>
</CustomField>