unpackaged/main/default/objects/FPC_Funding_del__c/fields/Approval_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Approval_Expiration__c</fullName>
    <description>Approval expiration</description>
    <inlineHelpText>Type in the expiration date of the approval.</inlineHelpText>
    <label>Approval Expiration</label>
    <type>Date</type>
</CustomField>