unpackaged/main/default/objects/FPC_Funding_del__c/fields/BOFI_Deal__c.field-meta.xml
<CustomField>
    <fullName>BOFI_Deal__c</fullName>
    <label>BOFI Deal</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>