unpackaged/main/default/objects/FPC_Funding_del__c/fields/Buy_Rate__c.field-meta.xml
<CustomField>
    <fullName>Buy_Rate__c</fullName>
    <description>Buy Rate</description>
    <inlineHelpText>Type in the lease buy rate.</inlineHelpText>
    <label>Buy Rate</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>