unpackaged/main/default/objects/FPC_Funding_del__c/fields/CalculatorLink__c.field-meta.xml
<CustomField>
    <fullName>CalculatorLink__c</fullName>
    <label>CalculatorLink</label>
    <length>255</length>
    <type>Text</type>
</CustomField>