unpackaged/main/default/objects/FPC_Funding_del__c/fields/Digital_Sales_Experience_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Digital_Sales_Experience_Indicator__c</fullName>
    <description>References the Account field Digital Sales Experience Indicator. This value is used by Digital Sales process to determine what experience should be used. Blank means the default experience is used.</description>
    <formula>Text(Opportunity__r.Broker_Account__r.Digital_Sales_Experience_Indicator__c)</formula>
    <inlineHelpText>Opportunity/Broker Account/Digital Sales Experience Indicator</inlineHelpText>
    <label>Digital Sales Experience Indicator</label>
    <type>Text</type>
</CustomField>