unpackaged/main/default/objects/FPC_Funding_del__c/fields/Discounted_Payments__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Payments__c</fullName>
    <description>Discounted payments.</description>
    <inlineHelpText>Type in the amount of the discounted lease payments.</inlineHelpText>
    <label>Discounted Payments</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>