unpackaged/main/default/objects/FPC_Funding_del__c/fields/Existing_Payment__c.field-meta.xml
<CustomField>
    <fullName>Existing_Payment__c</fullName>
    <description>This field will capture the value of an existing loan payment(s) that we need to consider in creating loan funding options for the customer.</description>
    <inlineHelpText>This field will capture the value of an existing loan payment(s) that we need to consider in creating loan funding options for the customer.</inlineHelpText>
    <label>Existing Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>