unpackaged/main/default/objects/FPC_Funding_del__c/fields/First_Due_Lendor_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Due_Lendor_Date__c</fullName>
    <description>First payment due date with lender.</description>
    <inlineHelpText>Type in the date that the first lease payment is due at the lender.</inlineHelpText>
    <label>First Due Lendor Date</label>
    <type>DateTime</type>
</CustomField>