unpackaged/main/default/objects/FPC_Funding_del__c/fields/Fund_Date__c.field-meta.xml
<CustomField>
    <fullName>Fund_Date__c</fullName>
    <description>Fund Date</description>
    <inlineHelpText>Type in the fund date of the opportunity.</inlineHelpText>
    <label>Fund Date</label>
    <type>DateTime</type>
</CustomField>