unpackaged/main/default/objects/FPC_Funding_del__c/fields/Impact_Factor__c.field-meta.xml
<CustomField>
    <fullName>Impact_Factor__c</fullName>
    <description>This field will derive the impact factor from the model (see related WC Credit Decision Record) for an approved deal and display it in this field.</description>
    <formula>Impact_Factor_Raw__c</formula>
    <label>Impact Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>