unpackaged/main/default/objects/FPC_Funding_del__c/fields/Internal_MID__c.field-meta.xml
<CustomField>
    <fullName>Internal_MID__c</fullName>
    <label>Internal MID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>