unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lease_Term__c.field-meta.xml
<CustomField>
    <fullName>Lease_Term__c</fullName>
    <description>Lease Term</description>
    <inlineHelpText>Type in the term of the lease.</inlineHelpText>
    <label>Lease Term</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>