unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <description>Lendor Name</description>
    <inlineHelpText>Type in the lendors name.</inlineHelpText>
    <label>Lender</label>
    <length>64</length>
    <type>Text</type>
</CustomField>