unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Lender_Deal_Id__c</fullName>
    <label>Lender Deal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>