unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender_Funded__c.field-meta.xml
<CustomField>
    <fullName>Lender_Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lender Funded</label>
    <type>Checkbox</type>
</CustomField>