unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender_ID__c.field-meta.xml
<CustomField>
    <fullName>Lender_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID for the lender in a custom object lookup.</description>
    <inlineHelpText>ID for the lender in a custom object lookup.</inlineHelpText>
    <label>Lender ID</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Lender Acct</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lender ID</relationshipLabel>
    <relationshipName>Funding</relationshipName>
    <type>Lookup</type>
</CustomField>