unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender_Name_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Lender_Name_Workflow__c</fullName>
    <description>This field will display a text value of the lender in the funding table.  This field will be used in a workflow in place of the Lender Account field which is a look up.</description>
    <formula>Lender_ID__r.Name</formula>
    <inlineHelpText>This field will display a text value of the lender in the funding table.  This field will be used in a workflow in place of the Lender Account field which is a look up.</inlineHelpText>
    <label>Lender Name - Workflow</label>
    <type>Text</type>
</CustomField>