unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lender_Notes__c</fullName>
    <label>Lender Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>