unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender_Position__c.field-meta.xml
<CustomField>
    <fullName>Lender_Position__c</fullName>
    <description>This field will capture the position that a lender is in when shopping a deal for an approval.</description>
    <inlineHelpText>This field will capture the position that a lender is in when shopping a deal for an approval.</inlineHelpText>
    <label>Lender Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>