unpackaged/main/default/objects/FPC_Funding_del__c/fields/Lender_Tier__c.field-meta.xml
<CustomField>
    <fullName>Lender_Tier__c</fullName>
    <formula>Lender_ID__r.Lender_Tier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lender Tier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>