unpackaged/main/default/objects/FPC_Funding_del__c/fields/NF_Commercial_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>NF_Commercial_Portfolio__c</fullName>
    <label>NF Commercial Portfolio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>