unpackaged/main/default/objects/FPC_Funding_del__c/fields/NF_Exception_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>NF_Exception_Approval_Amount__c</fullName>
    <description>This field will be updated when an exception request is approved and the Amount of the approval needs to be updated.</description>
    <label>NF Exception Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>