unpackaged/main/default/objects/FPC_Funding_del__c/fields/NF_Exception_Approval_Term__c.field-meta.xml
<CustomField>
    <fullName>NF_Exception_Approval_Term__c</fullName>
    <label>NF Exception Approval Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>