unpackaged/main/default/objects/FPC_Funding_del__c/fields/NF_Initial_Approval_Amount__c.field-meta.xml
<CustomField>
    <fullName>NF_Initial_Approval_Amount__c</fullName>
    <description>This field will be populated from the Credit Review when a Credit Review related to an opportunity is initially approved.</description>
    <label>NF Initial Approval Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>