unpackaged/main/default/objects/FPC_Funding_del__c/fields/Payment_with_Tax__c.field-meta.xml
<CustomField>
    <fullName>Payment_with_Tax__c</fullName>
    <description>Lease payment with tax.</description>
    <inlineHelpText>Type in the monthly lease payment with tax.</inlineHelpText>
    <label>Payment with Tax</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>