unpackaged/main/default/objects/FPC_Funding_del__c/fields/Payment_without_Tax__c.field-meta.xml
<CustomField>
    <fullName>Payment_without_Tax__c</fullName>
    <description>Lease payment without tax.</description>
    <inlineHelpText>Type in the monthly lease payment without tax.</inlineHelpText>
    <label>Payment without Tax</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>