unpackaged/main/default/objects/FPC_Funding_del__c/fields/Pricing_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Definition_Name__c</fullName>
    <description>Formula field to allow Sales Reps to visualize the current Pricing definition - Originally implemented for Retention Pricing.</description>
    <formula>Pricing_Definition__r.Name</formula>
    <label>Pricing Definition</label>
    <type>Text</type>
</CustomField>