unpackaged/main/default/objects/FPC_Funding_del__c/fields/Rent_Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Rent_Commencement_Date__c</fullName>
    <description>Rent commencement date</description>
    <inlineHelpText>Type in the rent / 1st payment commencement date.</inlineHelpText>
    <label>Rent Commencement Date</label>
    <type>DateTime</type>
</CustomField>