unpackaged/main/default/objects/FPC_Funding_del__c/fields/Residual__c.field-meta.xml
<CustomField>
    <fullName>Residual__c</fullName>
    <description>Residual</description>
    <inlineHelpText>Type in the amount of the residual.</inlineHelpText>
    <label>Residual</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>