unpackaged/main/default/objects/FPC_Funding_del__c/fields/Revenue_Adjustment_Percent__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Adjustment_Percent__c</fullName>
    <description>The adjustment percentage used to calculate Adjusted Annual Revenue</description>
    <label>Revenue Adjustment Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>