unpackaged/main/default/objects/FPC_Funding_del__c/fields/Send_Method__c.field-meta.xml
<CustomField>
    <fullName>Send_Method__c</fullName>
    <description>Indicates if Funding record will be submitted to lender manually or automatically via Syndication API webservice.</description>
    <label>Send Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automated</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>