unpackaged/main/default/objects/FPC_Funding_del__c/fields/SIC_Code__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code__c</fullName>
    <label>SIC Code</label>
    <length>8</length>
    <type>Text</type>
</CustomField>