unpackaged/main/default/objects/FPC_Funding_del__c/fields/Specialized_Loan__c.field-meta.xml
<CustomField>
    <fullName>Specialized_Loan__c</fullName>
    <label>Specialized Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter Loan</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>