unpackaged/main/default/objects/FPC_Funding_del__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of funding</description>
    <inlineHelpText>Pick the funding status of the opportunity.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Older Approval</fullName>
            </value>
            <value>
                <fullName>Lender Pend Info</fullName>
            </value>
            <value>
                <fullName>Lender Approved</fullName>
            </value>
            <value>
                <fullName>Send to Lender</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Not Eligible</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Auto Submitting</fullName>
            </value>
            <value>
                <fullName>Submission in Progress</fullName>
            </value>
            <value>
                <fullName>Referred</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>