unpackaged/main/default/objects/FPC_Funding_del__c/fields/Status_User__c.field-meta.xml
<CustomField>
    <fullName>Status_User__c</fullName>
    <description>User who changed the FPC Funding status is recorded.</description>
    <inlineHelpText>User who changed the FPC Funding is recorded.</inlineHelpText>
    <label>Status User</label>
    <length>12</length>
    <type>Text</type>
</CustomField>