unpackaged/main/default/objects/FPC_Funding_del__c/fields/Stips_to_Clear__c.field-meta.xml
<CustomField>
    <fullName>Stips_to_Clear__c</fullName>
    <description>Count of Stips that do not have a status of Cleared or Waived.</description>
    <inlineHelpText>Count of Stips that do not have a status of Cleared or Waived.</inlineHelpText>
    <label>Stips to Clear</label>
    <summaryFilterItems>
        <field>Stipulations__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cleared</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Stipulations__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Waived</value>
    </summaryFilterItems>
    <summaryForeignKey>Stipulations__c.Funding__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>