unpackaged/main/default/objects/FPC_Funding_del__c/fields/Tax_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Type__c</fullName>
    <description>Tax Type / Tax Treatment</description>
    <inlineHelpText>Pick the tax treatment of the lease.</inlineHelpText>
    <label>Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Tax</fullName>
            </value>
            <value>
                <fullName>Tax on the Stream</fullName>
            </value>
            <value>
                <fullName>Tax Upfront</fullName>
            </value>
            <value>
                <fullName>Tax Upfront On Gross Receipts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>