unpackaged/main/default/objects/FPC_Funding_del__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>