unpackaged/main/default/objects/FPC_Funding_del__c/fields/UW_Pricing_ID__c.field-meta.xml
<CustomField>
    <fullName>UW_Pricing_ID__c</fullName>
    <description>Pricing Id from UW org (PD-3157)</description>
    <inlineHelpText>Pricing Id from UW org</inlineHelpText>
    <label>UW Pricing ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>