unpackaged/main/default/objects/FPC_Funding_del__c/fields/Weekly_Payment_Approved__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Payment_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Weekly Payment Approved</label>
    <type>Checkbox</type>
</CustomField>