unpackaged/main/default/objects/FPC_Funding_del__c/validationRules/Cannot_edit_pricing_definition_if_funded.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_edit_pricing_definition_if_funded</fullName>
    <active>true</active>
    <description>PD-5356, Prevent users from changing pricing definition on funded deal</description>
    <errorConditionFormula>AND( 
    ISPICKVAL(Opportunity__r.StageName, 'Funded') ,
    ISCHANGED(Pricing_Definition__c),
     $Setup.ValidationRules__c.Exclude_from_Funding_Pricing_Val_Rule__c = FALSE
)</errorConditionFormula>
    <errorDisplayField>Pricing_Definition__c</errorDisplayField>
    <errorMessage>You cannot change pricing definition on funded deals.</errorMessage>
</ValidationRule>